--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -135,4 +135,11 @@
 .gr1
   background-image: url('../assets/curso/bg-gr1.png')
   background-size: cover
-  
+.neg 
+  color: #000000 !important
+    
+.h-435
+    height: 435px !important
+
+.img-infografica.color-acento-contenido .img-infografica__item__dot:after,
+      background-color: #0DDCF1 !important   
