--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -80,7 +80,7 @@
 .cac
   color: $color-acento-contenido !important
 .fcac50
-  background-color: #FFF8E7 !important
+  background-color: #ffe9e7 !important
 .fcac30
   background-color: rgba(255,179,11,.3) !important
 .cp
@@ -141,5 +141,13 @@
 .h-435
     height: 435px !important
 
-.img-infografica.color-acento-contenido .img-infografica__item__dot:after,
-      background-color: #0DDCF1 !important   
+.img-infografica.color-acento-contenido .img-infografica__item__dot:after,.img-infografica.color-acento-contenido .img-infografica__item__dot:before,
+      background-color: #f8f8f8 !important   
+
+   
+.tarjeta.color-secundario--borde.adss-5 
+    top: 9rem
+    position: relative
+.tarjeta.color-secundario--borde.adss-3 
+    top: 7rem
+    position: relative    
