videos + material descargable

--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -117,7 +117,7 @@
     display: block
     border: dashed $color-primario
 
-.bloque-texto-a__texto.p-4
+//.bloque-texto-a__texto.p-4
   position: relative
   &::before
     content: ''
@@ -151,3 +151,6 @@
 .tarjeta.color-secundario--borde.adss-3 
     top: 7rem
     position: relative    
+
+.contenedor-dashed
+  border: 2px dashed #004B89     
